Tests env Squashed commit of the following:
commit 9ae16a7fc91db86051cbd4b4bffc065b49ac16f2
Author: Ivan Salnikov <salnikov@devgroup.ru>
Date:   Tue Aug 30 15:54:09 2016 +0300

    @fps01 suggested fixes

commit b989189d81671da5742e4609f64ed813798b3dad
Author: Ivan Salnikov <salnikov@devgroup.ru>
Date:   Tue Aug 30 15:27:19 2016 +0300

    readme

commit 1f1f31b4cfd22d497cf69fc603285f1fdb2071aa
Author: Ivan Salnikov <salnikov@devgroup.ru>
Date:   Tue Aug 30 15:18:55 2016 +0300

    init tests and full env

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,10 @@
         "another-vendor/required-package": "~1.2.3"
     },
     "require-dev": {
+        "codeception/codeception": "2.2.*",        
+        "se/selenium-server-standalone": "^2.53",
+        "yiisoft/yii2-faker": "^2.0",
+        "yiisoft/yii2-codeception": "^2.0",
         "another-vendor/required-dev-package": "^2.3.4"
     },
     "autoload": {
